tests/lean/ty1.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
  Imported 'Int'
  Assumed: i
λ x : ℤ, x + i : ℤ → ℤ
λ x : ℕ, x + 1 : ℕ → ℕ
ty1.lean:5:10 error: invalid expression, it still contains metavariables after elaboration, metavariable: ?M::0, type:
(Type U)
λ x y : ℤ, y + i + 1 + x : ℤ → ℤ → ℤ
(λ x : ℤ, x) i : ℤ
(λ x : ℤ → ℤ → ℤ, x i) (λ x y : ℤ, x + 1 + y) : ℤ → ℤ
(λ x : ℕ → ℕ → ℕ, x) (λ x y : ℕ, x + 1 + y) : ℕ → ℕ → ℕ
